fixed menu far sides borders to double borders and mobile top section layout

--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@
   align-items: center;
   min-height: 110px;
   width: 1200px;
-  padding: 15px calc(15px + var(--scrollbar-width)) 0 15px;
+  padding: 20px calc(15px + var(--scrollbar-width)) 0 15px;
 }
 @media (max-width: 767px) {
   #top-bar {
@@ -529,6 +529,9 @@
   outline: 0;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.08), 0 0 8px rgba(91, 192, 222, 0.6);
 }
+#top-bar .search-wrapper-alt {
+  width: 100vw;
+}
 #top-bar .search-alt {
   position: relative;
   background-color: rgba(0, 0, 0, 0.1);
@@ -536,18 +539,19 @@
   outline: 1px solid rgba(255, 255, 255, 0.2);
   border: 2px solid rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  width: calc(100vw - var(--scrollbar-width));
+  width: 100%;
   height: 47px;
   font-size: 14px;
   line-height: 1.42857143;
-  margin: 15px 0 0;
+  margin: 15px 0;
   padding: 0 15px 0 15px;
 }
 #top-bar .btn-search-alt {
   display: inline-flex;
   position: absolute;
-  right: 0;
+  right: 5px;
   background-color: transparent;
+  border: solid 1px pink;
   outline: none;
   border: none;
   height: 47px;
@@ -599,7 +603,7 @@
   white-space: normal;
   padding: 0 20px;
   margin: 0 0 0 15px;
-  max-width: 55px;
+  width: 66px;
 }
 #top-bar .btn-hamburger:hover {
   color: white;
@@ -1438,6 +1442,14 @@
   justify-content: center;
   font-family: FontAwesome !important;
   content: "";
+}
+
+.wrapper-design {
+  border-left: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.wrapper-security {
+  border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
 
 #hero-slider {
